Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1663,14 +1663,14 @@
     "yes": "Si",
     "yesterday": "Ayer",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-audio": "Odeslali jste zvuk",
+    "you-sent-a-document": "Odeslali jste dokument",
+    "you-sent-a-location": "Odeslali jste umístění",
+    "you-sent-a-picture": "Odeslali jste obrázek",
+    "you-sent-a-video": "Odeslali jste video",
     "you-should-change-passwd": "Debería cambiar su contraseña",
     "your": "Suyo",
     "zip-code": "Código Postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "PSČ",
     "zip-error-wrong-structure": "La estructura del zip es incorrecta. Debe contener la carpeta del plugin y solamente un plugin."
 }
