--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -303,7 +303,7 @@
     "contract": "Vertrag",
     "contracts": "Verträge",
     "control-panel": "Schalttafel",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Warnung: Diese Änderung betrifft die Preise von Produkten, aber auch die Gesamtsummen von Rechnungen, Buchungen, etc.",
     "controller": "Regler",
     "controller-error": "Controller Fehler",
     "controller-not-found": "Treiber nicht gefunden",
@@ -316,20 +316,20 @@
     "copy-p": "Füllen Sie das Formular aus, um eine Kopie dieses Modells zu erstellen",
     "copy-subaccounts": "Kontenplan kopieren",
     "core-update": "Kernel-Update auf Version %version%",
-    "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
-    "cost": "Coste",
+    "core-update-warning": "Aktualisierungswarnungen",
+    "correct": "Korrekt",
+    "cost": "Kosten",
     "cost-price": "Kostenpreis",
     "cost-price-policy": "Kosten Preispolitik",
     "counterpart": "Gegenstück",
     "countries": "Länder",
     "country": "Land",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "Das Land mit dem Code %codiso% gehört nicht zur Europäischen Union",
     "create": "erstellen",
     "create-accounting-entry": "Buchung erstellen",
-    "create-delivery-note": "Crear albarán",
-    "create-estimation": "Crear presupuesto",
-    "create-invoice": "Crear factura",
+    "create-delivery-note": "Lieferschein erstellen",
+    "create-estimation": "Kostenvoranschlag erstellen",
+    "create-invoice": "Rechnung erstellen",
     "create-new-record": "Neuen Datensatz erstellen",
     "created": "erstellt",
     "created-default-admin-account": "Benutzer <b>nick<\/b>mit Passwort <b>pass<\/b> angelegt.",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Aktuelles Quartal",
     "current-risk": "aktuelles Risiko",
     "customer": "Kunde",
     "customer-account-not-found": "Unterkonto des Kunden nicht gefunden",
