--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -500,13 +500,13 @@
     "email": "e-mail",
     "email-bcc": "Email Copia Conoscenza Nascosta",
     "email-cc": "Email Copia Conoscenza",
-    "email-not-configured": "email-not-configured",
+    "email-not-configured": "Email non configurata",
     "email-not-sent": "Non inviato",
     "email-notification": "Notifica via email",
     "email-notification-disabled": "La notifica email di %name% è disabilitata",
     "email-notification-not-exists": "Notifica via email %name% non trovata",
     "email-replies": "risposta e-mail",
-    "email-replies-to": "email-replies-to",
+    "email-replies-to": "Rispondi a email",
     "email-sent": "Inviato via Mail",
     "email-sent-to": "Inviato a email",
     "email-signature": "Firma Email",
@@ -536,12 +536,12 @@
     "error": "Errore:% 1 $ s",
     "error-checking-vat-number": "Errore nel verificare il numero '%vat-number%' nel sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
-    "error-deleting-lines": "error-deleting-lines",
+    "error-deleting-lines": "Errore nella cancellazione delle righe",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Errore nell'elaborazione della vista XML, il file '0' non esiste o non è corretto",
     "error-reading-file": "Errore durante la lettura del file% 1 $ s",
-    "error-saving-lines": "error-saving-lines",
+    "error-saving-lines": "Errore nel salvataggio delle righe",
     "error-saving-stock": "¡Errore durante il salvataggio delle scorte!",
     "error-to-innodb": "Impossibile convertire la tabella di InnoDB.",
     "error-updating-product-stock": "Errore durante l'aggiornamento dello stock prodotti!",
@@ -559,49 +559,49 @@
     "es-tax-regime-exempt": "Esente",
     "es-tax-regime-general": "Regime generale",
     "es-tax-regime-gold": "Regime speciale dell'oro di investimento",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-group-entities": "Regime fiscale speciale per il gruppo di entità",
+    "es-tax-regime-simplified": "Regime fiscale semplificato",
+    "es-tax-regime-surcharge": "Recargo di equivalenza",
+    "es-tax-regime-telecom": "Regimi speciali applicabili ai servizi di telecomunicazioni, radiodiffusione o televisivi e ai servizi erogati via elettronica",
+    "es-tax-regime-travel": "Regime fiscale speciale per le agenzie di viaggio",
+    "es-tax-regime-used-goods": "Regime fiscale speciale per beni usati, oggetti d'arte, antichità e oggetti da collezione",
     "estimation": "bilancio",
-    "estimation-email-subject": "estimation-email-subject",
-    "estimation-email-text": "estimation-email-text",
+    "estimation-email-subject": "Oggetto dell'email di preventivo",
+    "estimation-email-text": "Testo dell'email di preventivo",
     "estimations": "budget",
     "event": "Evento",
-    "events": "Eventos",
-    "exceptions": "exceptions",
-    "excess": "excess",
-    "exclude-invalid": "Excluir inválidos",
-    "exclude-valid": "Excluir válidos",
+    "events": "Eventi",
+    "exceptions": "eccezioni",
+    "excess": "eccesso",
+    "exclude-invalid": "Escludi non validi",
+    "exclude-valid": "Escludi validi",
     "exempt": "Esonerare",
     "exercise": "Esercizio",
     "exercise-date-out-range": "La data non corrisponde all'esercizio corrente.",
-    "exercise-date-range-exists": "exercise-date-range-exists",
+    "exercise-date-range-exists": "Intervallo di date d'esercizio esistente",
     "exercise-not-found": "Esercizio non trovato.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "L'esercizio %exercise% non ha ancora un piano contabile",
     "exercises": "esercizi",
-    "exit": "exit",
-    "expedient": "expedient",
+    "exit": "uscita",
+    "expedient": "pratica",
     "expense-subaccount": "expense-subaccount",
     "expenses": "expenses",
     "expiration": "Scadenza",
     "expiration-type": "expiration-type",
-    "expired": "expired",
-    "expired-receipt": "Recibo vencido",
+    "expired": "scaduto",
+    "expired-receipt": "Ricevuta scaduta",
     "export": "Esporta",
-    "export-bill": "export-bill",
+    "export-bill": "fattura di esportazione",
     "extra-file": "File aggiuntivo",
-    "failed": "Fallido",
+    "failed": "Fallito",
     "families": "famiglie",
     "family": "Famiglia",
     "family-code": "Codice famiglia",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Febbraio",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
-    "field-required": "Campo requerido: %field%",
-    "fields": "Campos",
+    "field-required": "Campo obbligatorio: %field%",
+    "fields": "Campi",
     "file": "archivio",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nome del file",
