--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1529,7 +1529,7 @@
     "title-url": "Titulua (URL)",
     "to": "Nori",
     "to-refund": "Itzultzera",
-    "to-report": "Informar",
+    "to-report": "Jakinarazi",
     "today": "Gaur",
     "total": "Totala",
     "total-amount": "Batuketa totala",
@@ -1612,19 +1612,19 @@
     "vat-document": "Dokumentua",
     "vat-exception": "BEZaren salbuespena",
     "vat-number-is-short": "'%vat-number%' zenbakia motza da",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "El número '%vat-number%' ez dago VIES sistemaren erregistroan",
     "vat-regime": "BEZ erregimena",
     "VAT-register": "Zerga liburua",
     "vat-regularization": "BEZ erregularizazioa",
     "vehicle": "Ibilgailua",
     "verified": "Egiaztatua",
     "version": "Bertsioa",
-    "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
+    "video": "Bideoa",
+    "vies-check-success": "'%vat-number%' zenbakia VIES sistemaren erregistroan dago",
+    "view-api": "API ikusi",
     "view-column-net-subtotal": "Zutabean azpi-totala edo garbia ikusi",
-    "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "view-estimation": "Aurreikuspena ikusi",
+    "view-order": "Eskaera ikusi",
     "warehouse": "Biltegia",
     "warehouse-cant-be-same": "Jatorrizko eta helmugako biltegiak ezin dira berdinak izan.",
     "warehouse-must-be-same-business": "Jatorri eta helburuko biltegiak enpresa berekoak izan behar dira",
@@ -1643,16 +1643,16 @@
     "wildcard-title": "Balio bategatik aldatu daitezken komodinak",
     "without-closure": "Itxierarik gabe",
     "without-domicile": "Helbideratu gabekoak",
-    "without-groups": "Sin grupo",
+    "without-groups": "Talderik gabe",
     "without-regularization": "Erregularizaziorik gabe",
     "without-tax": "BEZ gabe",
     "without-taxation": "Zerga gabe",
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
-    "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "work-events": "Lan ekitaldiak",
+    "working-hours": "Lan orduak",
+    "write-a-message-here": "Idatzi mezu bat hemen",
     "x-column": "X zutabea",
     "x-operation": "X-n eragiketa",
     "y-column": "Y zutabea",
