--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -552,19 +552,19 @@
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
     "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-exempt": "Exento",
-    "es-tax-regime-general": "Régimen general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
-    "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-exception-e6": "Espanya: excepció per una altra causa",
+    "es-tax-regime-agrarian": "Règim especial de l'agricultura, ramaderia i pesca",
+    "es-tax-regime-cash-criteria": "Criteri de caixa",
+    "es-tax-regime-especial-agp": "Règim especial de l'agricultura, ramaderia i pesca",
+    "es-tax-regime-exempt": "Exempt",
+    "es-tax-regime-general": "Règim general",
+    "es-tax-regime-gold": "Régimen especial de l'or d'inversió",
+    "es-tax-regime-group-entities": "Règim especial del grup d'entitats",
+    "es-tax-regime-simplified": "Règim simplificat",
+    "es-tax-regime-surcharge": "Recàrrec d'equivalència",
+    "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
+    "es-tax-regime-travel": "Règim especial de les agències de viatges",
+    "es-tax-regime-used-goods": "Règim especial dels béns usats, objectes d'art, antiguitats i objectes de col·lecció",
     "estimation": "Presupost",
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
