--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -374,7 +374,7 @@
     "dashboard-for": "Taffel der %company%",
     "data-source": "Datenquelle",
     "database": "Datenbank",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Fehler bei der Verbindung zur Datenbank",
     "database-name-must-be-lowercase": "Der Dateiname muss in Kleinbuchstaben sein",
     "date": "Datum",
     "date-in": "Datum in",
@@ -384,9 +384,9 @@
     "date-out-of-exercise-range": "Datum außerhalb der Reichweite 0",
     "date-wildcard-info": "ktulles Datum (Datum des Rechners)",
     "dateentry-wildcard-info": "Kopfzeilen Datum  der Buchung",
-    "day": "day",
+    "day": "Tag",
     "days": "Tage",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Tage Aufbewahrung von Logs",
     "days-until-expiration": "Tage bis Ablauf",
     "db-host": "Dades Datenbankserver",
     "db-name": "Name Datenbank",
@@ -402,7 +402,7 @@
     "decimals": "Dezimalzahlen",
     "default": "Voreinstellung",
     "default-customer": "Standardkunde",
-    "default-retention": "default-retention",
+    "default-retention": "Retención por defecto",
     "default-role": "Standard Benutzergruppe",
     "default-tax": "Standardsteuer",
     "default-to-company-email": "Por defecto al email de la empresa",
@@ -1029,6 +1029,7 @@
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-public": "No público",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
