--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1029,6 +1029,7 @@
     "not-allowed-modify": "Ez duzu aldatzeko baimenik",
     "not-enough-stock": "%reference% artikuluaren stock nahikoa ez dago",
     "not-passed-integrity-check": "Fitxategi batzuk ez dute gainditu integritate egiaztapena ...  <br\/>Hemen <a class='alert-link' target='_blank' href='IntegritySystemCheck'> begiratu xehetasunak<\/a>.",
+    "not-public": "Ez da publikoa",
     "not-stored-content": "Ezin da edukia biltegi egin",
     "not-valid-email": "%email% eposta baliogabea",
     "not-valid-fiscal-number": "%type% %number% baliogabea",
@@ -1663,14 +1664,14 @@
     "yes": "Bai",
     "yesterday": "Atzo",
     "you-cant-delete-primary-variant": "Ezin duzu produktuaren aldaera nagusia kendu",
-    "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-audio": "Audio bat bidali duzu",
+    "you-sent-a-document": "Dokumentu bat bidali duzu",
+    "you-sent-a-location": "Kokapen bat bidali duzu",
+    "you-sent-a-picture": "Irudia bidali duzu",
+    "you-sent-a-video": "Bideo bat bidali duzu",
     "you-should-change-passwd": "Zure pasahitza aldatu beharko zenuen",
     "your": "Zure",
     "zip-code": "Posta Kodea",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Posta-kodeak",
     "zip-error-wrong-structure": "Zip-aren egitura okerra da. Pluginaren karpeta eta plugin bakarra izan behar ditu."
 }
