--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -603,13 +603,13 @@
     "field-required": "Campo obbligatorio: %field%",
     "fields": "Campi",
     "file": "archivio",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Errore durante l'invio del file %fileName% perché l'estensione non è consentita. Le estensioni consentite sono: %accepted%",
     "file-name": "Nome del file",
     "file-not-exists": "Il file non esiste: %fileName%",
     "file-not-found": "File %1$s non trovato.",
     "file-not-supported": "File non supportato",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-size-error": "Errore durante l'invio del file %fileName% perché supera la dimensione massima consentita di %maxSize% MB",
+    "file-type-error": "Errore durante l'invio del file di tipo %typeFile%. I tipi supportati sono: audio, documento, immagine e video.",
     "file-yet-exists": "File già esistente: %filePath%",
     "filecache-clear": "Filecache cancellato.",
     "filecache-delete-key-item": "Elemento cancellato '0' da Filecache.",
@@ -620,10 +620,10 @@
     "filter-records-containing-indicated-value": "Filtra i record che contengono il valore indicato",
     "filters": "Filtri",
     "finalize": "finalize",
-    "find-problems": "Encontrar problemas",
-    "finished": "Finalizado",
+    "find-problems": "Trova problemi",
+    "finished": "Completato",
     "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
-    "first-quarter": "Primer trimestre",
+    "first-quarter": "Primo trimestre",
     "first-steps": "first-steps",
     "first-trimester": "Primo trimestre",
     "fiscal-data": "Dati fiscali",
@@ -634,7 +634,7 @@
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
     "font": "Font",
-    "font-size": "font-size",
+    "font-size": "Dimensione del font",
     "footer": "Pié de página",
     "footer-text": "footer-text",
     "for-admins": "Para administradores",
@@ -1029,6 +1029,7 @@
     "not-allowed-modify": "not-allowed-modify",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-public": "No público",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
