--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1029,6 +1029,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha prou estoc de %reference%",
     "not-passed-integrity-check": "Alguns arxius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtenir més detalls aquí<\/a>.",
+    "not-public": "No público",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
     "not-valid-fiscal-number": "El %type% %number% no és vàlid",
