--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -569,12 +569,12 @@
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
     "estimations": "Presuposts",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Esdeveniment",
+    "events": "Esdeveniments",
     "exceptions": "Excepcions",
     "excess": "excess",
-    "exclude-invalid": "Excluir inválidos",
-    "exclude-valid": "Excluir válidos",
+    "exclude-invalid": "Excloure invàlids",
+    "exclude-valid": "Excloure vàlids",
     "exempt": "Exent",
     "exercise": "Eixercici",
     "exercise-date-out-range": "La data no pertany al periodo de l'eixercici.",
@@ -589,7 +589,7 @@
     "expiration": "Venciment",
     "expiration-type": "Tipo de venciment",
     "expired": "Caducat",
-    "expired-receipt": "Recibo vencido",
+    "expired-receipt": "Rebut vençut",
     "export": "Exportar",
     "export-bill": "Factura d'exportació",
     "extra-file": "Archiu extra",
@@ -1029,6 +1029,7 @@
     "not-allowed-modify": "No té permís per a modificar",
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
+    "not-public": "No público",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
