- Aumentado a 1000 el límite de eventos en segundo plano procesados por el cron. - Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -502,7 +502,7 @@
     "email-cc": "Email mit Kopie",
     "email-not-configured": "E-Mail nicht konfiguriert. Sie können die E-Mail über das Administratormenü, Systemsteuerung, Anwendungseinstellungen konfigurieren.",
     "email-not-sent": "nicht gesendet",
-    "email-notification": "Notificación por email",
+    "email-notification": "E-Mail Benachrichtigung",
     "email-notification-disabled": "La notificación de email %name% está desactivada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
@@ -741,7 +741,7 @@
     "idaccount": "Ich würde. Konto",
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Bild",
-    "images": "Imágenes",
+    "images": "Bilder",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
@@ -818,7 +818,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Google Maps Schlüssel",
     "keys": "Schlüssel",
     "lang-code": "Sprachcode",
     "language": "Sprache:",
@@ -1070,7 +1070,7 @@
     "option": "Option",
     "optional": "optional",
     "options": "Optionen",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Layout und Berechtigungen",
     "order": "bestellen",
     "order-email-subject": "Ihre Bestellung %code%",
     "order-email-text": "order-email-text",
@@ -1323,7 +1323,7 @@
     "sdk": "sdk",
     "search": "Suche",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-product": "Search product",
+    "search-product": "Produkt suchen",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
@@ -1388,7 +1388,7 @@
     "simplified": "Simplificada",
     "size": "size",
     "sketch": "Boceto",
-    "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
+    "sketch-invoice-warning": "Diese Rechnung ist noch ein Entwurf. Machen Sie sie offiziell, indem Sie ihren Status auf ausgestellt ändern.",
     "small": "small",
     "smaller-than": "Kleiner als",
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
@@ -1443,7 +1443,7 @@
     "subaccounts": "Unterkonten",
     "subfamilies": "subfamilies",
     "subject": "subject",
-    "subtotal": "subtotal",
+    "subtotal": "Zwischensumme",
     "subtract": "Subtract",
     "success": "success",
     "sum": "Suma",
@@ -1487,7 +1487,7 @@
     "table-size": "table-size",
     "tables": "zeichnen",
     "task": "task",
-    "tasks": "tasks",
+    "tasks": "Aufgaben",
     "tasks-completed-title": "Abgeschlossene Aufgaben",
     "tasks-component-title": "Aufgaben",
     "tasks-personal-title": "Persönliche Aufgaben",
@@ -1506,7 +1506,7 @@
     "template-not-found": "Vorlage nicht gefunden",
     "templates": "Plantillas",
     "test": "Test",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "Der Test des Mail-Controller ist nicht implementiert",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
     "texts": "texts",
@@ -1575,7 +1575,7 @@
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
-    "unlock-entry": "Desbloquear",
+    "unlock-entry": "Eintrag entsperren",
     "unpaid": "unpaid",
     "until-accounting-entry": "until-accounting-entry",
     "until-date": "until-date",
