--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -705,7 +705,7 @@
     "group-by-year": "Raggruppa per anno",
     "group-by-year-unixtime": "group-by-year-unixtime",
     "group-more-docs-p": "group-more-docs-p",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nome del Gruppo",
     "group-or-split": "Group or split",
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
@@ -906,7 +906,7 @@
     "long": "Lungo",
     "longitude": "Longitudine",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Cerca spazi vuoti",
     "lot": "lotto",
     "low-security": "Low security",
     "machine": "machine",
@@ -998,7 +998,7 @@
     "net": "Netto",
     "new": "Nuovo",
     "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
-    "new-address": "Nueva traducción",
+    "new-address": "Nuova traduzione",
     "new-customer": "new customer",
     "new-customers": "new-customers",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
@@ -1029,7 +1029,7 @@
     "not-allowed-modify": "not-allowed-modify",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
-    "not-public": "No público",
+    "not-public": "Non pubblico",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
@@ -1195,7 +1195,7 @@
     "private": "private",
     "private-key": "Clave privada",
     "process": "Proceso",
-    "processing": "processing",
+    "processing": "elaborazione",
     "product": "Prodotto",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Prodotti",
@@ -1204,7 +1204,7 @@
     "profit-and-loss-balance": "Profit and loss accounts",
     "profits": "Beneficios",
     "project": "project",
-    "projects": "projects",
+    "projects": "progetti",
     "provider-reference": "Riferimento del fornitore",
     "province": "provincia",
     "provinces": "provinces",
@@ -1297,7 +1297,7 @@
     "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
     "resource": "Resource",
     "respond": "Responder",
-    "restore": "restore",
+    "restore": "ripristina",
     "restore-data": "Ripristinare i dati",
     "result": "Risultato",
     "retention": "retention",
@@ -1314,7 +1314,7 @@
     "sales": "I saldi",
     "sales-invoice": "sales-invoice",
     "sales-rate": "Tasso di vendita",
-    "sales-subaccount-not-found": "sales-subaccount-not-found",
+    "sales-subaccount-not-found": "conto-secondario-vendite-non-trovato",
     "same-group": "Lo stesso gruppo",
     "saturday": "saturday",
     "save": "salvare",
@@ -1362,7 +1362,7 @@
     "series": "serie",
     "server": "Server",
     "service": "service",
-    "services": "services",
+    "services": "servizi",
     "settings": "Ajustes",
     "settlement": "settlement",
     "settlement-product": "settlement-product",
@@ -1509,7 +1509,7 @@
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
-    "texts": "texts",
+    "texts": "testi",
     "third-quarter": "3º trimestre",
     "third-trimester": "Third trimester",
     "this-last-fortnight": "Ultimi 15 giorni",
@@ -1574,7 +1574,7 @@
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
     "until-accounting-entry": "until-accounting-entry",
@@ -1613,7 +1613,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
     "vat-regularization": "VAT Regularization",
