--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -403,7 +403,7 @@
     "default": "Default",
     "default-customer": "Cliente Padrão",
     "default-retention": "default-retention",
-    "default-role": "Default role",
+    "default-role": "F",
     "default-tax": "default-tax",
     "default-to-company-email": "Por defecto al email de la empresa",
     "default-to-user-email": "Por defecto al email del usuario",
@@ -423,7 +423,7 @@
     "delivery-note-email-text": "Olá, vai anexo a sua Nota de Entrega %code%",
     "delivery-notes": "Notas de entrega",
     "delivery-notes-button": "Notas de Entrega pendentes:",
-    "department": "department",
+    "department": "d",
     "departments": "departments",
     "desc": "Descrição",
     "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras unidades administrativas",
@@ -552,7 +552,7 @@
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
@@ -589,7 +589,7 @@
     "expiration": "Expiração",
     "expiration-type": "expiration-type",
     "expired": "expired",
-    "expired-receipt": "Recibo vencido",
+    "expired-receipt": "R",
     "export": "export",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
@@ -924,10 +924,10 @@
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
     "march": "Marzo",
-    "margin": "margin",
+    "margin": "m",
     "margin-top": "Topo da margem",
     "mark-as-homepage": "Marque como página inicial",
-    "marked-as-homepage": "Marcado como página inicial",
+    "marked-as-homepage": "M",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "max-risk",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
@@ -1013,7 +1013,7 @@
     "no-data": "Sem dados",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "no-extra-lines",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "N",
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
@@ -1158,7 +1158,7 @@
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "plugin-removal-disabled",
     "plugin-unsupported-version": "plugin-unsupported-version",
-    "plugin-update": "plugin-update",
+    "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "points",
@@ -1211,7 +1211,7 @@
     "public": "Público",
     "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
-    "purchased-quantity": "purchased-quantity",
+    "purchased-quantity": "q",
     "purchases": "Compras",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Preço de varejo",
@@ -1551,7 +1551,7 @@
     "translation": "Tradução",
     "translations": "Traduções",
     "travel": "Viaje",
-    "try-again-later": "try-again-later",
+    "try-again-later": "T",
     "tuesday": "terça-feira",
     "type": "Tipo",
     "type-alert": "Type alert",
@@ -1587,7 +1587,7 @@
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
-    "upload-file": "Subir archivo",
+    "upload-file": "E",
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
     "use-gaps": "use-gaps",
