--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -762,7 +762,7 @@
     "insert-update": "Añadir o modificar",
     "installed": "Instalat",
     "installed-plugins": "Complements instalats",
-    "installer": "Instalador de FacturaScripts 2018",
+    "installer": "Instal·lador de FacturaScripts 2018",
     "installer-p": "Benvingut a l'instalador de FacturaScripts. Ompli els camps necessaris per a conectar en la base de senyes.",
     "installer-requirements": "FacturaScripts necessita les següents extensions i funcions:",
     "integrity-check": "Comprovar l'integritat",
@@ -779,7 +779,7 @@
     "invalid-number": "invalid-number",
     "invalid-request": "Petició no vàlida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
-    "invalid-web": "Dirección web no válida",
+    "invalid-web": "Adreça web no vàlida",
     "invoice": "Factura",
     "invoice-email-subject": "invoice-email-subject",
     "invoice-email-text": "invoice-email-text",
@@ -818,7 +818,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Clau de Google Maps",
     "keys": "Claus",
     "lang-code": "Còdic de l'idioma",
     "language": "Idioma",
@@ -1105,7 +1105,7 @@
     "password": "Contrasenya",
     "pattern": "Patró",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
+    "pattern-without-serie": "El patró triat no inclou sèrie, per la qual cosa és possible que generi codis duplicats per a cada sèrie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Pagar",
     "pay-with-card": "Pargar en targeta",
@@ -1118,7 +1118,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% de recàrrec",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% impostos",
     "pct-vat": "% d'impost",
     "pending": "pending",
     "pending-invoices-button": "Fact. Pends.",
@@ -1154,7 +1154,7 @@
     "plugin-needed": "Se necessita el Plugin %pluginName%.",
     "plugin-needs-fs-version": "El complement %pluginName% necessita FacturaScripts %minVersion% pero tens instalat FacturaScripts %version%",
     "plugin-not-compatible": "El complement %pluginName% no és compatible en FacturaScripts 2018.",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Ordre: %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "L'eliminació de complements està deshabilitada en este servidor",
     "plugin-unsupported-version": "El plugin %pluginName% és per a FacturaScripts 2017 o anteriors, però estàs fent servir FacturaScripts %version%",
@@ -1221,7 +1221,7 @@
     "pvptotal-line-error": "Error en el valor 'pvptotal' de la línea %reference% de document. El valor correcte és: %total%",
     "quantity": "Cantitat",
     "quantity-abb": "quantity-abb",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Quantitat restant",
     "quantity-served": "Cantitat servida",
     "quantity-sold": "quantity-sold",
     "randomizer-generating-more-items": "Generant més elements...",
