- Modificado el cron para detener los eventos en segundo plano a los 25 segundos cuando se ejecuta desde el navegador, para evitar timeout. De lo contrario ejecuta hasta 1000 eventos. - Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -751,7 +751,7 @@
     "import-file": "Importare file",
     "in-progress": "En progreso",
     "in-stock": "in-stock",
-    "inactive": "inactive",
+    "inactive": "inattivo",
     "income-and-expenses": "Ingressi e Uscite",
     "incompatible-document": "incompatible-document",
     "incompatible-with-facturascripts": "Incompatibile con la versione %version% di FacturaScripts",
@@ -1000,8 +1000,8 @@
     "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
     "new-address": "Nuova traduzione",
     "new-customer": "new customer",
-    "new-customers": "new-customers",
-    "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-customers": "nuovi-clienti",
+    "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
     "new-price": "new-price",
     "new-refund": "new-refund",
@@ -1121,7 +1121,7 @@
     "pct-tax": "% impuestos",
     "pct-vat": "% IVA",
     "pending": "pending",
-    "pending-invoices-button": "Rischio:",
+    "pending-invoices-button": "Fatture in sospeso:",
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
     "percentage": "Percentage",
