--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -741,7 +741,7 @@
     "idaccount": "Id. del conte",
     "idem-wildcard-info": "Còpia el valor de la llínea anterior",
     "image": "Imatge",
-    "images": "Imágenes",
+    "images": "Imatges",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subconte del IVA repercutit",
@@ -842,7 +842,7 @@
     "languages-fr_FR": "Français",
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
-    "languages-pl_PL": "Polaco",
+    "languages-pl_PL": "Polonès",
     "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valencià",
@@ -1016,7 +1016,7 @@
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
@@ -1425,7 +1425,7 @@
     "stock-transfers": "Transferències d'estoc",
     "stockmax": "Estoc màxim",
     "stockmin": "Estoc mínim",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Límit d'emmagatzematge quasi aconseguit (%limit%). Resten %free%",
     "storage-limit-reached": "storage-limit-reached",
     "stripe": "Stripe",
     "structured-data-csv": "Archiu CSV",
