--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -553,7 +553,7 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
@@ -580,7 +580,7 @@
     "exercise-date-out-range": "Date not in exercise range.",
     "exercise-date-range-exists": "exercise-date-range-exists",
     "exercise-not-found": "Exercício não encontrado.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "O",
     "exercises": "Exercícios",
     "exit": "exit",
     "expedient": "Expediente",
@@ -624,7 +624,7 @@
     "finished": "Finalizado",
     "finished-cron": "Finalizou a execução do cron do FacturaScripts, tempo transcorrido: %timeNeeded%",
     "first-quarter": "Primer trimestre",
-    "first-steps": "first-steps",
+    "first-steps": "f",
     "first-trimester": "First trimester",
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
@@ -637,7 +637,7 @@
     "font-size": "Tamanho de fonte",
     "footer": "Pié de página",
     "footer-text": "Texto do rodapé",
-    "for-admins": "Para administradores",
+    "for-admins": "P",
     "for-all": "Para todos",
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Para compra",
@@ -1026,7 +1026,7 @@
     "none": "Nenhum",
     "normal": "normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
-    "not-allowed-modify": "not-allowed-modify",
+    "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "No público",
@@ -1137,7 +1137,7 @@
     "phones": "Telefones",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
-    "php-support-end": "php-support-end",
+    "php-support-end": "p",
     "physical-stock": "Estoque físico",
     "picking": "Picking",
     "plan": "Plano",
@@ -1154,7 +1154,7 @@
     "plugin-needed": "Plugin %pluginName% requerido.",
     "plugin-needs-fs-version": "plugin-needs-fs-version",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "O",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "plugin-removal-disabled",
     "plugin-unsupported-version": "plugin-unsupported-version",
@@ -1262,7 +1262,7 @@
     "register-installation": "register-installation",
     "register-installation-p": "register-installation-p",
     "register-symbol": "#",
-    "registered-installation": "registered-installation",
+    "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
     "regularization-operation": "Regularización",
     "reject": "Rechazar",
@@ -1426,7 +1426,7 @@
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
-    "storage-limit-reached": "storage-limit-reached",
+    "storage-limit-reached": "s",
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
@@ -1441,7 +1441,7 @@
     "subaccount-pyg-not-found": "subaccount-pyg-not-found",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subcontas",
-    "subfamilies": "subfamilies",
+    "subfamilies": "s",
     "subject": "Assunto",
     "subtotal": "subtotal",
     "subtract": "Tirar do estoque",
