Añadido mensaje de aviso cuando el cron se detiene por tiempo.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -337,6 +337,7 @@
     "credit": "Hartzekoa",
     "crm": "CRM",
     "cron-job": "Zeregin programatua",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Krons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
