--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -337,6 +337,7 @@
     "credit": "Haver",
     "crm": "CRM",
     "cron-job": "Tasca programada",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
