--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -337,6 +337,7 @@
     "credit": "Kredit",
     "crm": "CRM",
     "cron-job": "Programmierte Arbeit",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
