--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -337,6 +337,7 @@
     "credit": "abonar",
     "crm": "CRM",
     "cron-job": "Tarea programada",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "moneda",
     "currency-position": "Posición símbolo de divisa",
