--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -337,6 +337,7 @@
     "credit": "Crédit",
     "crm": "GRC",
     "cron-job": "Tâche programmée",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
