--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -337,6 +337,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "cron-job",
+    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Currency position",
